feat: authentication version 1
