# f2soperator/operation/apiserver/main.go
@@ -3,6 +3,7 @@ package apiserver
 import (
 	"butschi84/f2s/hub"
 	"butschi84/f2s/services/logger"
+	"fmt"
 	"net/http"
 
 	"github.com/gorilla/mux"
@@ -36,22 +37,29 @@ func HandleRequests(hub *hub.F2SHub) {
 	openAPIHandler := http.FileServer(http.Dir("./static/openapi"))
 	router.PathPrefix("/docs/").Handler(http.StripPrefix("/docs/", openAPIHandler))
 
-	// retrieve configured f2s functions
-	router.HandleFunc("/functions", returnAllFunctions).Methods(http.MethodGet)
-	router.HandleFunc("/functions", createFunction).Methods(http.MethodPost)
-	router.HandleFunc("/functions/{id}", getFunction).Methods(http.MethodGet)
-	router.HandleFunc("/functions/{id}", deleteFunction).Methods(http.MethodDelete)
-	router.HandleFunc("/deployments", getAllDeployments).Methods(http.MethodGet)
-	router.HandleFunc("/operator", getOperatorState).Methods(http.MethodGet)
-	router.HandleFunc("/services", getAllServices).Methods(http.MethodGet)
-	router.HandleFunc("/endpoints", getAllEndpoints).Methods(http.MethodGet)
-	router.HandleFunc("/dispatcher", getCurrentDispatcherData).Methods(http.MethodGet)
-	router.HandleFunc("/config", getConfiguration).Methods(http.MethodGet)
-	router.HandleFunc("/events", getLatestEvents).Methods(http.MethodGet)
-	router.HandleFunc("/deployments", createDeployment).Methods(http.MethodPost)
-	router.HandleFunc("/invoke/{target}", invokeFunction)
-	router.HandleFunc("/prometheus/{functionname}/{metricname}", getPrometheusMetric)
+	// open endpoints
 	router.HandleFunc("/health", checkHealth)
+	router.HandleFunc("/auth/type", getAuthType).Methods(http.MethodGet)
+	router.HandleFunc("/auth/signjwt", signJWT)
+
+	// protected endpoints (auth)
+	protectedRouter := router.PathPrefix("/").Subrouter()
+	protectedRouter.Use(authMiddleware)
+	protectedRouter.HandleFunc("/auth/signin", signin)
+	protectedRouter.HandleFunc("/functions", returnAllFunctions).Methods(http.MethodGet)
+	protectedRouter.HandleFunc("/functions", createFunction).Methods(http.MethodPost)
+	protectedRouter.HandleFunc("/functions/{id}", getFunction).Methods(http.MethodGet)
+	protectedRouter.HandleFunc("/functions/{id}", deleteFunction).Methods(http.MethodDelete)
+	protectedRouter.HandleFunc("/deployments", getAllDeployments).Methods(http.MethodGet)
+	protectedRouter.HandleFunc("/operator", getOperatorState).Methods(http.MethodGet)
+	protectedRouter.HandleFunc("/services", getAllServices).Methods(http.MethodGet)
+	protectedRouter.HandleFunc("/endpoints", getAllEndpoints).Methods(http.MethodGet)
+	protectedRouter.HandleFunc("/dispatcher", getCurrentDispatcherData).Methods(http.MethodGet)
+	protectedRouter.HandleFunc("/config", getConfiguration).Methods(http.MethodGet)
+	protectedRouter.HandleFunc("/events", getLatestEvents).Methods(http.MethodGet)
+	protectedRouter.HandleFunc("/deployments", createDeployment).Methods(http.MethodPost)
+	protectedRouter.HandleFunc("/invoke/{target}", invokeFunction)
+	protectedRouter.HandleFunc("/prometheus/{functionname}/{metricname}", getPrometheusMetric)
 
 	// frontend, ui
 	frontendHandler := http.FileServer(http.Dir("./static/frontend"))
@@ -59,6 +67,23 @@ func HandleRequests(hub *hub.F2SHub) {
 
 	logging.Info("listening on http://0.0.0.0:8080")
 	http.ListenAndServe("0.0.0.0:8080", router)
+}
+
+// Authentication Middleware
+func authMiddleware(next http.Handler) http.Handler {
+	return http.HandlerFunc(func(w http.ResponseWriter, request *http.Request) {
+
+		logging.Info(fmt.Sprintf("authenticate request with '%s' auth model", f2shub.F2SConfiguration.Config.F2S.Auth.GlobalConfig.Type))
+		authErr := authenticateIncomingRequest(request)
+		if authErr != nil {
+			logging.Warn(fmt.Sprintf("there was an error while authenticating the request: %s", authErr.Error()))
+			http.Error(w, "access denied", http.StatusUnauthorized)
+			return
+		}
+
+		// Call the next handler in the chain
+		next.ServeHTTP(w, request)
+	})
 }
 
 // Middleware function to set Access-Control-Allow-Origin header to *
